// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OTUsList /> > should render 1`] = `
<ContainerNarrow>
  <Connect(RebuildAlert) />
  <Connect(OTUToolbar) />
  <Connect(CreateOTU)
    documents={
      [
        "foo",
      ]
    }
    onLoadNextPage={[MockFunction spy]}
    otus={
      {
        "verified": true,
      }
    }
    page={1}
    page_count={1}
    refId="foo"
    references={
      {
        "detail": {
          "id": 1,
        },
      }
    }
    renderRow={true}
    term="bar"
    verified={true}
  />
  <ScrollList
    documents={
      [
        "foo",
      ]
    }
    onLoadNextPage={[Function]}
    page={1}
    pageCount={1}
    renderRow={[Function]}
  />
</ContainerNarrow>
`;

exports[`<OTUsList /> > should render when [this.props.documents === null] 1`] = `<LoadingPlaceholder />`;

exports[`<OTUsList /> > should render when [this.props.documents.length == false] 1`] = `
<ContainerNarrow>
  <Connect(RebuildAlert) />
  <Connect(OTUToolbar) />
  <Connect(CreateOTU)
    documents={false}
    onLoadNextPage={[MockFunction spy]}
    otus={
      {
        "verified": true,
      }
    }
    page={1}
    page_count={1}
    refId="foo"
    references={
      {
        "detail": {
          "id": 1,
        },
      }
    }
    renderRow={true}
    term="bar"
    verified={true}
  />
  <NoneFoundBox
    noun="OTUs"
  />
  <ScrollList
    documents={false}
    onLoadNextPage={[Function]}
    page={1}
    pageCount={1}
    renderRow={[Function]}
  />
</ContainerNarrow>
`;
